--- a/poko.css
+++ b/poko.css
@@ -1553,7 +1553,7 @@ img.right-img {
         font-family: snart;
     }
     .sect-cont {
-        background-color: #1aa4eb;
+        background-color: #0d32ba;
         border: 2px solid rgb(0, 0, 0);
         padding: 40px;
         margin: 30px;
@@ -1575,7 +1575,7 @@ img.right-img {
         width: 30rem;
         height: 60px;
         margin-top: 20px;
-        border: 2px solid rgba(37, 117, 252, 1);
+        border: 2px solid #0d32ba;
         font-weight: 700;
     }
 
